
  - TetrahedralMeshTopologyKernel:
	- Behaviour change: TetVertexIterator now starts with `from` vertex of first halfedge of first cell halfface (previously: `to` vertex of same halffedge) for consistency with get_cell_vertices(). 
	- Feature: vertex_opposite_halfface(CellHandle, VertexHandle) as inverse of halfface_opposite_vertex
	- Improvement: Optimized get_cell_vertices()

Version 3.3.2 (2025-04-25)
  - Bugfix (behavioural change!): TopologyKernel::genus() would return wrong results if garbage collection is required (it used entity counts that included deleted elements)
  - Fix SmartTagger bug that made reset() work in O(n) instead of (mostly) O(1) (thanks to Tobias Kohler)

Version 3.3.1 (2024-01-18)
  - Bugfix: n_logical_halffaces() count was incorrect (included deleted faces)
  - Bugfix: n_logical_halffaces() count was incorrect (included deleted faces)

Version 3.3.0 (2023-12-08)
  - Bugfix: get_*_property() convenience functions were declared but not defined.
  - New: Unstable/ for work-in-progress APIs
  - New: local topology helper classes in Unstable/Topology/:
        - Consistent local entity labeling
        - TetTopology and TriangleTopology
  - New: std::hash specialization for handle types, so they can be used in std::unordered_map
  - Improvement: make TopologyKernel::reorder_incident_halffaces public to properly support existing 
                 public methods that alter internal data
  - VTK file reader now supports files without colors
  - Small performance improvements

Version 3.2.2 (2022-10-13):
  - Add various convenience property convenience functions, e.g.
        - `mesh.create_{shared, persistent, private}_{vertex, edge, ...}_property()`
        - `mesh.get_{vertex, edge, ...}_property()`
  - Un-deprecate other convenience functions, e.g. mesh.clear_{vertex, ...}_props()
  - (Fix some compiler warnings)

Version 3.2.1 (2022-08-18):
  - Fix OVMB float endianness (#43)

Version 3.2.0 (2022-07-29):